--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </center>
     <br><hr><br><style>img{border: 5px solid teal;}</style>
     
-         <img src="file:/D:/New Folder/Spandita Biswas.jpg"width="200" height="250" align ="right"><p style="color: darkred;font-style: normal;font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;">I am Spandita Biswas , a student of ECE department of<u style="color: steelblue;"> Dr. B.C. Roy Engineering College.</u>
+         <img src="Spandita Biswas.jpg"width="200" height="250" align ="right"><p style="color: darkred;font-style: normal;font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;">I am Spandita Biswas , a student of ECE department of<u style="color: steelblue;"> Dr. B.C. Roy Engineering College.</u>
           <br><br>I am 19 years old.My father's name is Susanta Kumar Biswas and mother's name is Pampa Biswas.I live in Kotulpur, Bankura.
           <br><br><br>
           <details><summary style="color: darkviolet;">Educational Qualification</summary>  I have completed my secondary and higher secondary from <span style="color: green"> Arambagh Vivekananda Academy </span> . After completing my Higher Secondary I came to<span style="color: green"> Dr. B.C. Roy Engineering college</span>  for persuing my B.Tech degree.</details>
